fix(net): add retry with exponential backoff for transient HTTP/network errors
DocumentSource.fetchUrl() and downloadToPath() previously only retried on
HTTP 429 via unbounded recursion. XbrlToParquetConverter.downloadFile() had
zero retry logic and short 10s timeouts. Both now retry 3 times with
exponential backoff (1s, 2s, 4s) on transient errors: HTTP 429/500/502/503/504,
TLS handshake failures, connection resets, timeouts, and broken pipes.
Also increased XbrlToParquetConverter timeouts from 10s to 30s.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>